--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,12 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.5",
+        "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0",
-        "symplify/easy-coding-standard": "^11.3"
+        "symplify/easy-coding-standard": "^11.3",
+        "symplify/phpstan-extensions": "^11.2"
     },
     "autoload": {
         "psr-4": {
@@ -50,6 +53,7 @@
         ],
         "check-cs": "ecs check --ansi",
         "fix-cs": "ecs check --fix --ansi",
+        "phpstan": "phpstan analyse --error-format symplify --ansi",
         "tests": "phpunit"
     },
     "extra": {
