--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.5",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0",
@@ -53,6 +54,7 @@
         ],
         "check-cs": "ecs check --ansi",
         "fix-cs": "ecs check --fix --ansi",
+        "lint": "parallel-lint --exclude .git --exclude node_modules --exclude storage --exclude vendor .",
         "phpstan": "phpstan analyse --error-format symplify --ansi",
         "tests": "phpunit"
     },
