--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-pdo": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -44,7 +45,9 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -54,9 +57,10 @@
         ],
         "check-cs": "ecs check --ansi",
         "fix-cs": "ecs check --fix --ansi",
+        "ide": "@php artisan ide-helper:models -W",
         "lint": "parallel-lint --exclude .git --exclude node_modules --exclude storage --exclude vendor .",
         "phpstan": "phpstan analyse --error-format symplify --ansi",
-        "tests": "phpunit"
+        "tests": "phpunit --testdox"
     },
     "extra": {
         "laravel": {
