--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "ext-pdo": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
