--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
+        "captainhook/captainhook": "^5.16",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -56,8 +57,8 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "check-cs": "ecs check --ansi",
-        "fix-cs": "ecs check --fix --ansi",
+        "check-cs": "ecs --ansi",
+        "fix-cs": "ecs --fix --ansi",
         "ide": "@php artisan ide-helper:models -W",
         "lint": "parallel-lint --exclude .git --exclude node_modules --exclude storage --exclude vendor .",
         "phpstan": "phpstan analyse --error-format symplify --ansi",
