--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^10.0",
+        "rector/rector": "^0.15.24",
         "spatie/laravel-ignition": "^2.0",
         "symplify/easy-coding-standard": "^11.3",
         "symplify/phpstan-extensions": "^11.2"
@@ -61,7 +62,9 @@
         "fix-cs": "ecs --fix --ansi",
         "ide": "@php artisan ide-helper:models -W",
         "lint": "parallel-lint --exclude .git --exclude node_modules --exclude storage --exclude vendor .",
-        "phpstan": "phpstan analyse --error-format symplify --ansi",
+        "phpstan": "phpstan analyse -c phpstan.neon --error-format symplify --ansi",
+        "rector": "rector process",
+        "rector-dr": "rector process --dry-run",
         "tests": "phpunit --testdox"
     },
     "extra": {
